Reetan.Nayak Dev 25/force-app/main/default/objects/Activity/fields/Activity_Time__c.field-meta.xml
<CustomField>
    <fullName>Activity_Time__c</fullName>
    <inlineHelpText>Enter total activity duration in minutes.</inlineHelpText>
    <label>Activity Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>