Reetan.Nayak Dev 25/force-app/main/default/objects/Activity/fields/Call_Report__c.field-meta.xml
<CustomField>
    <fullName>Call_Report__c</fullName>
    <formula>IF(Call_Report_Id__c != &apos;&apos;, HYPERLINK(&apos;/&apos;&amp; Call_Report_Id__c , &apos;Call Report&apos; ,&apos;_parent&apos;), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Report</label>
    <type>Text</type>
</CustomField>