Reetan.Nayak Dev 25/force-app/main/default/objects/Activity/fields/Call_Report_Id__c.field-meta.xml
<CustomField>
    <fullName>Call_Report_Id__c</fullName>
    <label>Call Report Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>