Reetan.Nayak Dev 25/force-app/main/default/objects/Activity/fields/Can_Run_Process__c.field-meta.xml
<CustomField>
    <fullName>Can_Run_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Run Process</label>
    <type>Checkbox</type>
</CustomField>