Reetan.Nayak Dev 25/force-app/main/default/objects/Activity/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>ToT Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sick Leave</fullName>
            </value>
            <value>
                <fullName>Vacation Leave</fullName>
            </value>
            <value>
                <fullName>Emergency Leave</fullName>
            </value>
            <value>
                <fullName>Annual Leave</fullName>
            </value>
            <value>
                <fullName>Public Holiday</fullName>
            </value>
            <value>
                <fullName>Paternity/Maternity Leave</fullName>
            </value>
            <value>
                <fullName>Congratulatory Leave</fullName>
            </value>
            <value>
                <fullName>Compassionate Leave</fullName>
            </value>
            <value>
                <fullName>Replacement Off</fullName>
            </value>
            <value>
                <fullName>Convention</fullName>
            </value>
            <value>
                <fullName>Company Meeting</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Teambuilding</fullName>
            </value>
            <value>
                <fullName>Pharma Event</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Bereavement Leave</fullName>
            </value>
            <value>
                <fullName>Compensate Leave</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>