Reetan.Nayak Dev 25/force-app/main/default/objects/Activity/fields/Created_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Time__c</fullName>
    <description>formula field called &quot;Created Date/Time&quot; (date/time data type) in Activity Custom fields that simply returns the standard CreatedDate field</description>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date/Time</label>
    <type>DateTime</type>
</CustomField>