Reetan.Nayak Dev 25/force-app/main/default/objects/Activity/fields/InterviewID__c.field-meta.xml
<CustomField>
    <fullName>InterviewID__c</fullName>
    <label>InterviewID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>