Reetan.Nayak Dev 25/force-app/main/default/objects/Activity/fields/Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Determines if Contact is a Primary Contact</description>
    <label>Is Primary</label>
    <type>Checkbox</type>
</CustomField>