Reetan.Nayak Dev 25/force-app/main/default/objects/Activity/fields/Japan_AppliAction__c.field-meta.xml
<CustomField>
    <fullName>Japan_AppliAction__c</fullName>
    <label>AppliAction</label>
    <type>TextArea</type>
</CustomField>