Reetan.Nayak Dev 25/force-app/main/default/objects/Activity/fields/Japan_BusinessBackground__c.field-meta.xml
<CustomField>
    <fullName>Japan_BusinessBackground__c</fullName>
    <label>Business Background</label>
    <type>TextArea</type>
</CustomField>