Reetan.Nayak Dev 25/force-app/main/default/objects/Activity/fields/Japan_Dept__c.field-meta.xml
<CustomField>
    <fullName>Japan_Dept__c</fullName>
    <label>Clinical Department</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Japan_MajorDept__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>A01_Internal Medicine - General</fullName>
            </value>
            <value>
                <fullName>A02_Internal Medicine - Oncology</fullName>
            </value>
            <value>
                <fullName>A03_Internal Medicine - Oncology</fullName>
            </value>
            <value>
                <fullName>A04_Internal Medicine - Oncology (Pain Relief)</fullName>
            </value>
            <value>
                <fullName>A05_Internal Medicine - Hematology/Oncology</fullName>
            </value>
            <value>
                <fullName>A06_Internal Medicine - Internal Medicine  (Circulatory)</fullName>
            </value>
            <value>
                <fullName>A07_Internal Medicine - Internal Medicine  (Pharmacotherapy)</fullName>
            </value>
            <value>
                <fullName>A08_Internal Medicine - Internal Medicine  (Infectious Diseases)</fullName>
            </value>
            <value>
                <fullName>A09_Internal Medicine - Internal Medicine  (Bone Marrow Transplantation)</fullName>
            </value>
            <value>
                <fullName>A10_Internal Medicine - Internal Medicine  (Pain Clinic)</fullName>
            </value>
            <value>
                <fullName>A11_Internal Medicine - Cardiology</fullName>
            </value>
            <value>
                <fullName>A12_Internal Medicine - Cardiovascular</fullName>
            </value>
            <value>
                <fullName>A13_Internal Medicine - Cardiac</fullName>
            </value>
            <value>
                <fullName>A14_Internal Medicine - Adult Diseases</fullName>
            </value>
            <value>
                <fullName>A15_Internal Medicine - Cardiovascular</fullName>
            </value>
            <value>
                <fullName>A16_Internal Medicine - Vascular</fullName>
            </value>
            <value>
                <fullName>A21_Internal Medicine - Gastroenterology</fullName>
            </value>
            <value>
                <fullName>A22_Internal Medicine - Digestive</fullName>
            </value>
            <value>
                <fullName>A23_Internal Medicine - Gastroenterology</fullName>
            </value>
            <value>
                <fullName>A24_Internal Medicine - Endoscopy</fullName>
            </value>
            <value>
                <fullName>A25_Internal Medicine - Gastrointestinal</fullName>
            </value>
            <value>
                <fullName>A26_Internal Medicine - Endoscopy</fullName>
            </value>
            <value>
                <fullName>A27_Internal Medicine - Digestive  (Endoscopy)</fullName>
            </value>
            <value>
                <fullName>A28_Internal Medicine - Proctology</fullName>
            </value>
            <value>
                <fullName>A29_Internal Medicine - Large Intestine</fullName>
            </value>
            <value>
                <fullName>A31_Internal Medicine - Respiratory</fullName>
            </value>
            <value>
                <fullName>A32_Internal Medicine - Tuberculosis</fullName>
            </value>
            <value>
                <fullName>A33_Internal Medicine - Pulmonary</fullName>
            </value>
            <value>
                <fullName>A34_Internal Medicine - Respirology</fullName>
            </value>
            <value>
                <fullName>A35_Internal Medicine - Infectious Disease</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>