Reetan.Nayak Dev 25/force-app/main/default/objects/Activity/fields/Japan_Description__c.field-meta.xml
<CustomField>
    <fullName>Japan_Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>