Reetan.Nayak Dev 25/force-app/main/default/objects/Activity/fields/Japan_Feed_Flag__c.field-meta.xml
<CustomField>
    <fullName>Japan_Feed_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To controll whether to automatically feed an event to chatter group</description>
    <label>Feed Flag</label>
    <type>Checkbox</type>
</CustomField>