Reetan.Nayak Dev 25/force-app/main/default/objects/Activity/fields/Japan_MajorDept__c.field-meta.xml
<CustomField>
    <fullName>Japan_MajorDept__c</fullName>
    <label>Clinical Department (Large Item)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A_Internal Medicine</fullName>
            </value>
            <value>
                <fullName>B_Surgical Department</fullName>
            </value>
            <value>
                <fullName>C_Orthopaedic Surgery</fullName>
            </value>
            <value>
                <fullName>D_Neurosurgery</fullName>
            </value>
            <value>
                <fullName>E_Radiology Department</fullName>
            </value>
            <value>
                <fullName>F_Anesthesia Department</fullName>
            </value>
            <value>
                <fullName>G_Surgery/Emergency</fullName>
            </value>
            <value>
                <fullName>H_Obstetrics and Gynaecology</fullName>
            </value>
            <value>
                <fullName>I_Dermatology</fullName>
            </value>
            <value>
                <fullName>J_Plastic Surgery</fullName>
            </value>
            <value>
                <fullName>K_Urology</fullName>
            </value>
            <value>
                <fullName>L_Pediatrics</fullName>
            </value>
            <value>
                <fullName>M_Ophthalmology</fullName>
            </value>
            <value>
                <fullName>N_Otorhinolaryngology</fullName>
            </value>
            <value>
                <fullName>O_Department of Neurology and Psychiatry</fullName>
            </value>
            <value>
                <fullName>P_Dental Surgery</fullName>
            </value>
            <value>
                <fullName>Q_Hygiene Inspection</fullName>
            </value>
            <value>
                <fullName>R_Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>