Reetan.Nayak Dev 25/force-app/main/default/objects/Activity/fields/Japan_ObjectModel1__c.field-meta.xml
<CustomField>
    <fullName>Japan_ObjectModel1__c</fullName>
    <label>Object Model 1</label>
    <length>120</length>
    <type>Text</type>
</CustomField>