Reetan.Nayak Dev 25/force-app/main/default/objects/Activity/fields/Japan_OtherLocation__c.field-meta.xml
<CustomField>
    <fullName>Japan_OtherLocation__c</fullName>
    <label>Other Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>