Reetan.Nayak Dev 25/force-app/main/default/objects/Activity/fields/Japan_OwnerID__c.field-meta.xml
<CustomField>
    <fullName>Japan_OwnerID__c</fullName>
    <formula>OwnerId</formula>
    <label>Sales Rep ID</label>
    <type>Text</type>
</CustomField>