Reetan.Nayak Dev 25/force-app/main/default/objects/Activity/fields/Japan_Presence__c.field-meta.xml
<CustomField>
    <fullName>Japan_Presence__c</fullName>
    <label>Presence</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Received</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Excluded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>