Reetan.Nayak Dev 25/force-app/main/default/objects/Activity/fields/Japan_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Japan_Purpose__c</fullName>
    <label>Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales Activity</fullName>
                <default>true</default>
                <label>Sales Activity</label>
            </value>
            <value>
                <fullName>Budget Request</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Delivery Preparation</fullName>
            </value>
            <value>
                <fullName>Delivered Goods</fullName>
            </value>
            <value>
                <fullName>Operating Instructions</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>CS</fullName>
            </value>
            <value>
                <fullName>Store</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Team Sales</fullName>
            </value>
            <value>
                <fullName>MR Touch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>