Reetan.Nayak Dev 25/force-app/main/default/objects/Activity/fields/Japan_RelatedOBJ__c.field-meta.xml
<CustomField>
    <fullName>Japan_RelatedOBJ__c</fullName>
    <formula>WhatId</formula>
    <label>linking OBJ</label>
    <type>Text</type>
</CustomField>