Reetan.Nayak Dev 25/force-app/main/default/objects/Activity/fields/Japan_SoftwareVersion3__c.field-meta.xml
<CustomField>
    <fullName>Japan_SoftwareVersion3__c</fullName>
    <label>Software Version 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>