Reetan.Nayak Dev 25/force-app/main/default/objects/Activity/fields/Japan_TaskCount__c.field-meta.xml
<CustomField>
    <fullName>Japan_TaskCount__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[Aggregate] Visit Record Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>