Reetan.Nayak Dev 25/force-app/main/default/objects/Activity/fields/Japan_Visit__c.field-meta.xml
<CustomField>
    <fullName>Japan_Visit__c</fullName>
    <label>Place of Visit</label>
    <length>30</length>
    <type>Text</type>
</CustomField>