Reetan.Nayak Dev 25/force-app/main/default/objects/Activity/fields/Last_Modified_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Date_Time__c</fullName>
    <description>formula field called &quot;Last Modified Date/Time&quot; (date/time data type) in Activity Custom fields that simply returns the standard LastModifiedDate field</description>
    <formula>LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Modified Date/Time</label>
    <type>DateTime</type>
</CustomField>