Reetan.Nayak Dev 25/force-app/main/default/objects/Activity/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <description>Information required to contact</description>
    <label>Mobile</label>
    <type>Phone</type>
</CustomField>