Reetan.Nayak Dev 25/force-app/main/default/objects/Activity/fields/Salesforce_ID__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_ID__c</fullName>
    <description>It is the 18 character version of the Salesforce ID to be used for reporting in data load processes.</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>It is the 18 character version of the Salesforce ID to be used for reporting in data load processes.</inlineHelpText>
    <label>Salesforce ID</label>
    <type>Text</type>
</CustomField>