Reetan.Nayak Dev 25/force-app/main/default/objects/Activity/fields/SeriesAccess__c.field-meta.xml
<CustomField>
    <fullName>SeriesAccess__c</fullName>
    <formula>IF ( IsRecurring__c , IMAGE(&quot;/img/recurring_activity.gif&quot;, &quot;Recurring&quot;) &amp; &quot; &quot; &amp; HYPERLINK(&quot;/servlet/servlet.Integration?lid=00b30000001v6rv&amp;eid=&quot;&amp; TaskRecurrenceId__c , &quot;Delete Series&quot;,&quot;_top&quot;) &amp; &quot; &quot; &amp; HYPERLINK(&quot;/servlet/servlet.Integration?lid=00b30000001v6rw&amp;eid=&quot;&amp; TaskRecurrenceId__c , &quot;Change Series Owner&quot;,&quot;_top&quot;), &quot;Individual Task&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task Series</label>
    <type>Text</type>
</CustomField>