Reetan.Nayak Dev 25/force-app/main/default/objects/Activity/fields/Shadow_Activity_Id__c.field-meta.xml
<CustomField>
    <fullName>Shadow_Activity_Id__c</fullName>
    <description>SFDC record id of the equivalent shadow activity record</description>
    <label>Shadow Activity Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>