Reetan.Nayak Dev 25/force-app/main/default/objects/Activity/fields/SpaceID__c.field-meta.xml
<CustomField>
    <fullName>SpaceID__c</fullName>
    <label>SpaceID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>