Reetan.Nayak Dev 25/force-app/main/default/objects/Activity/fields/SparkID__c.field-meta.xml
<CustomField>
    <fullName>SparkID__c</fullName>
    <label>SparkID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>