Reetan.Nayak Dev 25/force-app/main/default/objects/Activity/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TechAspire</fullName>
            </value>
            <value>
                <fullName>TechAspire mini</fullName>
            </value>
            <value>
                <fullName>Continuing Medical education programs</fullName>
            </value>
            <value>
                <fullName>Round Table Meets</fullName>
            </value>
            <value>
                <fullName>Product Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>