Reetan.Nayak Dev 25/force-app/main/default/objects/Activity/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <label>Task</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>call - Requirement Gathering</fullName>
            </value>
            <value>
                <fullName>call - User Training / Education</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>RnD</fullName>
            </value>
            <value>
                <fullName>Webex Chat</fullName>
            </value>
            <value>
                <fullName>Worked on Case</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>