Reetan.Nayak Dev 25/force-app/main/default/objects/Activity/fields/TaskRecurrenceId__c.field-meta.xml
<CustomField>
    <fullName>TaskRecurrenceId__c</fullName>
    <externalId>true</externalId>
    <label>TaskRecurrenceId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>