Reetan.Nayak Dev 25/force-app/main/default/objects/Activity/fields/TaskSeriesDescribe__c.field-meta.xml
<CustomField>
    <fullName>TaskSeriesDescribe__c</fullName>
    <label>Series Description</label>
    <length>150</length>
    <type>Text</type>
</CustomField>