Reetan.Nayak Dev 25/force-app/main/default/objects/Activity/fields/Time_off_Territory_PM__c.field-meta.xml
<CustomField>
    <fullName>Time_off_Territory_PM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ToT PM</label>
    <type>Checkbox</type>
</CustomField>