Reetan.Nayak Dev 25/force-app/main/default/objects/Activity/fields/To_Weekly_report__c.field-meta.xml
<CustomField>
    <fullName>To_Weekly_report__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Include in Weekly Report?</label>
    <type>Checkbox</type>
</CustomField>