Reetan.Nayak Dev 25/force-app/main/default/objects/Activity/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Rep Event</fullName>
            </value>
            <value>
                <fullName>Time off Territory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>