Reetan.Nayak Dev 25/force-app/main/default/objects/Activity/fields/Work_Phone__c.field-meta.xml
<CustomField>
    <fullName>Work_Phone__c</fullName>
    <description>Information required to contact</description>
    <label>Work Phone</label>
    <type>Phone</type>
</CustomField>